removed admin from user registration options
